test(more): item and user